--- a/src/css/style.less
+++ b/src/css/style.less
@@ -126,12 +126,10 @@ input#movie-search:focus {
 .card .returnBtn {
   color: #FFFFFF;
   background-color: #1DC8AB;
-  margin-top: 10px;
+  display: inline-block;
+  margin-top: 5px;
   padding: 12px 20px;
   border-radius: 10px 10px 10px 10px;
-  border-color: #CFDCE2;
-  border-style: solid;
-  border-width: thin;
   box-shadow: none;
   transition: 0.3s;
   -webkit-appearance: none;
